Styled img container and img caption

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main id="main" class="main">
       <h1 id="title" class="title">Mr Elon Musk</h1>
-      <figure id="img-div" class="image-container">
+      <figure id="img-div" class="img-container">
         <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/elon-musk-1625047579.jpg" alt="good looking picture of Elon Musk">
         <figcaption id="img-caption" class="img-caption">Photo taken in an important interview</figcaption>
       </figure>
